# coin24dive

./: .env.template  .gitignore  .gitlab-ci.yml  README.md  diver.py  diver.txt  getter.py  getter.txt  main.p  main.py  notifications.py  notifications.txt  payload.json  process.txt  pyproject.toml  ruff.toml  test.py
analytics/: catex.json
analytics_v_old/: openai-gpt-5-9mm.json  openai-gpt-5-vpt.json  openai-o4-mini-high.json
coindata/: america-party.json  boringdao-[old].json  catex.json  economycoin.json  multichain-bridged-busd-moonriver.json
data/analytics/: openai-gpt-5-busd.json  openai-gpt-5-quantumcoin-2.json
data/analytics_v_old/: openai-gpt-5-dna.json
data/coindata/: 88mph.json  9mm.json  a7a5.json  acid-ai.json  aionix-the-hub-of-ai.json  aix-network.json  aluna.json  amazon-xstock.json  antitoken.json  auto.json  autobahn-network.json  based-lambow.json  beta-finance.json  beware-of-geeks-bearing-grifts.json  biden-coin.json  bitcoin-bridged-zed20.json  bittoken.json  blazr.json  boatkid.json  bossdog.json  bridged-busd.json  build.json  bull-pepe.json  cantina-royale.json  cappuccino-assassino.json  (+72 more)
dives/: dives20250705  dives20250705.json  dives20250706.json
llm/: analytics_report.json  analytics_report_structured.json  llm_analyze  llm_analyze.py  llm_analyze.txt  llm_builder_test.py  llm_builder_test.txt  model.py  model.txt  openrouter.py  openrouter.txt  superprompt
samples/: coins_marketddata_sample_response.json  response.json  sample_output.txt  sample_payload.json
utils/: clog.py  display_rich_table.py  display_rich_table.txt
(+194 files in other folders)
